# rust-minisort

./: Cargo.toml  LICENSE.md  README.md
input/: test_file.txt
output/: output.txt  test_file_output.txt
src/: main.rs
